--- a/lang/el.json
+++ b/lang/el.json
@@ -304,6 +304,8 @@
         "OneVisit": "1 επίσκεψη",
         "OnlyEnterIfRequired": "Εισάγετε όνομα χρήστη μόνο αν το απαιτεί ο διακομιστής SMTP σας",
         "OnlyEnterIfRequiredPassword": "Εισάγετε κωδικό πρόσβασης μόνο αν το απαιτεί ο διακομιστής SMTP σας",
+        "SmtpFromEmailHelp": "Η προκαθορισμένη τιμή είναι noreply@{DOMAIN}, όπου το {DOMAIN} θα αντικατασταθεί από το όνομα χώρου του Matomo \"%1$s\".<br>Αν η αποστολή των e-mail δεν δουλεύει, θα πρέπει να ορίσετε τη διεύθυνση αυτή να είναι ίδια με το όνομα χρήστη για το SMTP.",
+        "NameShownInTheSenderColumn": "Το όνομα που εμφανίζεται στην στήλη αποστολέα",
         "OnlyUsedIfUserPwdIsSet": "Χρησιμοποιήστε το μόνο αν έχει οριστεί όνομα χρήστη\/κωδικός πρόσβασης. Ρωτήστε τον πάροχό σας αν δεν είστε σίγουρος\/η ποια μέθοδο να χρησιμοποιήσετε",
         "OpenSourceWebAnalytics": "Λογισμικό Ανάλυσης Ιστοσελίδων",
         "OperationAtLeast": "Τουλάχιστον",
@@ -402,6 +404,8 @@
         "SmtpPort": "Θύρα SMTP",
         "SmtpServerAddress": "Διεύθυνση διακομιστή SMTP",
         "SmtpUsername": "Όνομα χρήστη SMTP",
+        "SmtpFromName": "Όνομα από στο SMTP",
+        "SmtpFromAddress": "Διεύθυνση από στο SMTP",
         "Source": "Προέλευση",
         "StatisticsAreNotRecorded": "Η Παρακολούθηση Επισκεπτών στο Matomo είναι απενεργοποιημένη! Η εκ νέου ενεργοποίηση εντοπισμού γίνεται θέτοντας record_statistics = 1 στο αρχείο config.ini.php.",
         "Subtotal": "Υποσύνολο",
