--- a/lang/es-ar.json
+++ b/lang/es-ar.json
@@ -304,6 +304,8 @@
         "OneVisit": "1 visita",
         "OnlyEnterIfRequired": "Sólo ingresá un nombre de usuario si tu servidor SMTP lo requiere.",
         "OnlyEnterIfRequiredPassword": "Sólo ingresá una contraseña si tu servidor SMTP lo requiere.",
+        "SmtpFromEmailHelp": "El valor predeterminado es \"noreply@{DOMAIN}\", en donde \"{DOMAIN}\" será reemplazado por tu dominio de Matomo \"%1$s\".<br>Si el envío de correo electrónico no funciona para vos, podrías necesitar establecer esta dirección para coincidir con tu nombre de usuario SMTP.",
+        "NameShownInTheSenderColumn": "El nombre mostrado en la columna de remitente",
         "OnlyUsedIfUserPwdIsSet": "Sólo usado si se establece un nombre de usuario \/ contraseña. Consultá con tu proveedor si no estás seguro de qué método usar.",
         "OpenSourceWebAnalytics": "Plataforma libre de análisis web",
         "OperationAtLeast": "Como mínimo",
@@ -402,6 +404,8 @@
         "SmtpPort": "Puerto SMTP",
         "SmtpServerAddress": "Dirección del servidor SMTP",
         "SmtpUsername": "Nombre de usuario SMTP",
+        "SmtpFromName": "Nombre SMTP",
+        "SmtpFromAddress": "Dirección SMTP",
         "Source": "Fuente",
         "StatisticsAreNotRecorded": "¡El Rastreo de visitas de Matomo está actualmente deshabilitado! Rehabilitá el rastreo mediante la configuración record_statistics = 1 en tu archivo config\/config.ini.php.",
         "Subtotal": "Subtotal",
