--- a/lang/pt-br.json
+++ b/lang/pt-br.json
@@ -304,6 +304,8 @@
         "OneVisit": "1 visita",
         "OnlyEnterIfRequired": "Insira um nome de usuário SMTP apenas se o servidor necessitar de um.",
         "OnlyEnterIfRequiredPassword": "Apenas insira uma senha SMTP se for requerimento do servidor.",
+        "SmtpFromEmailHelp": "O valor padrão é noreply@{DOMÍNIO}, onde {DOMÍNIO} será substituído pelo seu domínio Matomo \"%1$s\".<br>Se o envio de e-mails não funcionar para você, você pode precisar definir este endereço para coincidir com o seu nome de usuário SMTP.",
+        "NameShownInTheSenderColumn": "O nome mostrado na coluna remetente",
         "OnlyUsedIfUserPwdIsSet": "Usado apenas se um nome de usuário e senha estiverem definidas. Pergunte ao seu fornecedor, caso não tem a certeza qual método deve utilizar.",
         "OpenSourceWebAnalytics": "Web Analytics Open Source",
         "OperationAtLeast": "pelo menos",
@@ -402,6 +404,8 @@
         "SmtpPort": "Porta SMTP",
         "SmtpServerAddress": "Endereço do servidor SMTP",
         "SmtpUsername": "Nome de usuário SMTP",
+        "SmtpFromName": "Nome SMTP do remetente",
+        "SmtpFromAddress": "Endereço SMTP do remetente",
         "Source": "Fonte",
         "StatisticsAreNotRecorded": "O rastreamento de visitantes Matomo está desativado! Para re-habilitar o rastreamento definina record_statistics = 1 em seu arquivo config\/config.ini.php.",
         "Subtotal": "Subtoal",
