--- a/lang/sq.json
+++ b/lang/sq.json
@@ -304,6 +304,8 @@
         "OneVisit": "1 vizitë",
         "OnlyEnterIfRequired": "Jepni emër përdoruesi vetëm nëse shërbyesi juaj SMTP lyp një të tillë.",
         "OnlyEnterIfRequiredPassword": "Jepni fjalëkalim vetëm nëse shërbyesi juaj SMTP lyp një të tillë.",
+        "SmtpFromEmailHelp": "Vlera parazgjedhje është noreply@{DOMAIN}, ku {DOMAIN} do të zëvendësohet me përkatësinë tuaj Matomo \"%1$s\".<br>Nëse dërgimi i email-eve nuk funksionon për ju, mundet t’ju duhet ta caktoni këtë adresë që të përputhet me emrin tuaj të përdoruesit SMTP.",
+        "NameShownInTheSenderColumn": "Emri i shfaqur te shtylla e dërguesit",
         "OnlyUsedIfUserPwdIsSet": "E përdorur vetëm kur ka të caktuar një emër përdoruesi\/fjalëkalim, pyesni furnizuesin e llogarisë suaj, nëse jeni i pasigurt se cilën metodë të përdorni.",
         "OpenSourceWebAnalytics": "platformë analizash të lira\/libre",
         "OperationAtLeast": "E pakta",
@@ -402,6 +404,8 @@
         "SmtpPort": "Portë SMTP",
         "SmtpServerAddress": "Adresë shërbyesi SMTP",
         "SmtpUsername": "Emër përdoruesi SMTP",
+        "SmtpFromName": "Emër SMTP Nga",
+        "SmtpFromAddress": "Adresë SMTP Nga",
         "Source": "Burim",
         "StatisticsAreNotRecorded": "Ndjekja e Vizitorëve nga Matomo është i çaktivizuar! Riaktivizojeni ndjekjen duke dhënë vlerën record_statistics = 1 te kartela juaj config\/config.ini.php.",
         "Subtotal": "Nënshumë",
