--- a/plugins/Referrers/lang/de.json
+++ b/plugins/Referrers/lang/de.json
@@ -73,7 +73,7 @@
         "VisitorsFromSearchEngines": "Besucher von Suchmaschinen",
         "PercentOfX": "Prozent von %s",
         "VisitorsFromSocialNetworks": "Besucher von sozialen Netzwerken",
-        "VisitorsFromDirectEntry": "Besucher von Driektzugriffen",
+        "VisitorsFromDirectEntry": "Besucher von Direktzugriffen",
         "VisitorsFromWebsites": "Besucher von Webseiten",
         "VisitorsFromCampaigns": "Besucher von Kampagnen"
     }
