--- a/plugins/UsersManager/lang/pt-br.json
+++ b/plugins/UsersManager/lang/pt-br.json
@@ -1,7 +1,9 @@
 {
     "UsersManager": {
         "2FA": "A2F",
+        "UsesTwoFactorAuthentication": "Usar autenticação de dois fatores",
         "TwoFactorAuthentication": "Autenticação de dois fatores",
+        "ResetTwoFactorAuthentication": "Redefinir autenticação de dois fatores",
         "AddUser": "Adicionar novo usuário",
         "AddExistingUser": "Adicionar um usuário existente",
         "AddNewUser": "Adicionar novo usuário",
@@ -25,6 +27,7 @@
         "Email": "E-mail",
         "EmailYourAdministrator": "%1$s E-mail a seu administrador sobre este problema %2$s.",
         "EnterUsernameOrEmail": "Digite um nome de usuário ou endereço de e-mail",
+        "ExceptionAccessValues": "O parâmetro de acesso deve conter um dos seguintes valores: [ %1$s ], '%2$s' fornecido.",
         "ExceptionAnonymousNoCapabilities": "Você não pode conceder nenhuma capacidade para o usuário 'anônimo'.",
         "ExceptionDeleteDoesNotExist": "O usuário '%s' não existe assim não é possível excluí-lo.",
         "ExceptionDeleteOnlyUserWithSuperUserAccess": "Não é possível excluir o usuário '%s'",
@@ -47,6 +50,9 @@
         "GiveViewAccess": "Permitir acesso de visualização para %1$s",
         "GiveViewAccessTitle": "Dar a usuário existente acesso para visualizar relatórios de %s",
         "GiveViewAccessInstructions": "Para dar acesso a um usuário existente para %s digite o nome de usuário ou endereço de e-mail de um usuário existente",
+        "YourCurrentPassword": "Sua senha atual",
+        "CurrentPasswordNotCorrect": "A senha atual informada não está correta.",
+        "ConfirmWithPassword": "Por favor digite sua senha para confirmar esta alteração.",
         "InjectedHostCannotChangePwd": "Você está visitando com um host desconhecido (%1$s). Você não pode mudar sua senha até que este problema seja resolvido.",
         "LastSeen": "Último visto",
         "MainDescription": "Decida quais usuários têm acesso a seus sites. Você também pode dar acesso a todos os sites de uma só vez, escolhendo \"Aplicar a todos os websites\" no seletor de website.",
@@ -61,6 +67,7 @@
         "PluginDescription": "O Gerenciamento de Usuários permite que você adicione novos usuários, edite usuários existentes e dá-lhes acesso para visualizar ou administrar websites.",
         "PrivAdmin": "Administrador",
         "PrivAdminDescription": "Usuários com esse papel podem gerenciar um website a dar acesso a esse website para outros usuários. Eles também podem fazer qualquer coisa que o papel %s pode fazer.",
+        "PrivWrite": "Escrever",
         "PrivNone": "Sem acesso",
         "PrivView": "Visualização",
         "PrivViewDescription": "Um usuário com esse papel pode visualizar todos os relatórios.",
@@ -83,8 +90,27 @@
         "YourUsernameCannotBeChanged": "Seu nome de usuário não pode ser alterado.",
         "YourVisitsAreIgnoredOnDomain": "%1$s Suas visitas são ignoradas pelo Matomo em %2$s %3$s (o Matomo ignora o cookie encontrado em seu navegador).",
         "YourVisitsAreNotIgnored": "%1$sSuas visitas não são ignoradas pelo Matomo%2$s (o Matomo ignora o cookie não encotrado em seu navegador)",
+        "AtLeastView": "Visualizado por último",
         "ManageUsers": "Gerenciar Usuários",
+        "BulkActions": "Ações em massa",
+        "SetPermission": "Definir Permissão",
+        "RemovePermissions": "Remover Permissões",
+        "Role": "Regras",
+        "TheDisplayedWebsitesAreSelected": "Os sites %1$s mostrados estão selecionado",
+        "ClickToSelectAll": "Clique para selecionar tudo %1$s.",
+        "AllWebsitesAreSelected": "Todos %1$s sites estão selecionados.",
+        "BasicInformation": "Informação básica",
+        "Permissions": "Permissões",
+        "SuperUserAccess": "Acesso super usuário",
+        "SuperUserIntro2": "Por favor, use essa funcionalidade com cuidado.",
+        "HasSuperUserAccess": "Possui Acesso Super Usuário",
+        "AreYouSure": "Você tem certeza?",
+        "DeleteUsers": "Excluir usuários",
+        "UserSearch": "Procurar usuário",
+        "FilterByAccess": "Filtrar por acesso",
+        "FilterByWebsite": "Filtrar por site",
         "ShowAll": "Exibir tudo",
-        "Username": "Nome de Usuário"
+        "Username": "Nome de Usuário",
+        "RoleFor": "Regra para"
     }
 }
