--- a/lang/de.json
+++ b/lang/de.json
@@ -304,6 +304,8 @@
         "OneVisit": "1 Besuch",
         "OnlyEnterIfRequired": "Geben Sie nur dann einen Benutzernamen an, wenn der SMTP-Server dies benötigt.",
         "OnlyEnterIfRequiredPassword": "Geben Sie nur dann ein Passwort an, wenn der SMTP-Server dies benötigt.",
+        "SmtpFromEmailHelp": "Der Standardwert ist noreply @ {DOMAIN}, wobei {DOMAIN} durch Ihre Matomo-Domain \"%1$s\" ersetzt wird.<br>Wenn das Versenden von E-Mails bei Ihnen nicht funktioniert, müssen Sie diese Adresse möglicherweise auf Ihren SMTP-Benutzernamen einstellen.",
+        "NameShownInTheSenderColumn": "Der Name der in der Absender-Spalte angezeigt wird",
         "OnlyUsedIfUserPwdIsSet": "Wird nur verwendet, wenn Benutzername\/Passwort gesetzt sind. Fragen Sie Ihren Provider, wenn Sie nicht sicher sind, welche Methode verwendet werden muss.",
         "OpenSourceWebAnalytics": "Quelloffene Webanalytik",
         "OperationAtLeast": "Mindestens",
@@ -402,6 +404,8 @@
         "SmtpPort": "SMTP-Port",
         "SmtpServerAddress": "SMTP-Server-Adresse",
         "SmtpUsername": "SMTP-Benutzername",
+        "SmtpFromName": "SMTP Von-Name",
+        "SmtpFromAddress": "SMTP Von-Adresse",
         "Source": "Quelle",
         "StatisticsAreNotRecorded": "Das Besuchertracking von Matomo ist derzeit deaktiviert! Reaktivieren Sie das Tracking, indem Sie in der Datei config\/config.ini.php record_statistics = 1 setzen.",
         "Subtotal": "Zwischensumme",
