--- a/lang/tr.json
+++ b/lang/tr.json
@@ -304,6 +304,8 @@
         "OneVisit": "1 ziyaret",
         "OnlyEnterIfRequired": "Gerekiyorsa SMTP sunucusu kullanıcı adını yazın.",
         "OnlyEnterIfRequiredPassword": "Gerekiyorsa SMTP sunucusu parolasını yazın.",
+        "SmtpFromEmailHelp": "Varsayılan değer noreply@{etkialanı}, şeklindedir. {Etki alanı} yerine \"%1$s\" Matomo etki alanınız konulur.<br>E-postalar gönderilemez ise, ybu adresi SMTP kullanıcı adınıza uygun şekilde ayarlamanız gerekebilir.",
+        "NameShownInTheSenderColumn": "Kimden sütununda görüntülenecek ad",
         "OnlyUsedIfUserPwdIsSet": "Yalnız kullanıcı adı ya da parola yazılmış ise kullanılır. Hangi yöntemi kullanacağınızdan emin değilseniz hizmet sağlayıcınıza sorun.",
         "OpenSourceWebAnalytics": "özgür açık kaynaklı istatistik platformu",
         "OperationAtLeast": "En Az Şu Olan",
@@ -402,6 +404,8 @@
         "SmtpPort": "SMTP Kapı Numarası",
         "SmtpServerAddress": "SMTP Sunucu Adresi",
         "SmtpUsername": "SMTP Kullanıcı Adı",
+        "SmtpFromName": "SMTP kimden adı",
+        "SmtpFromAddress": "SMTP kimden adresi",
         "Source": "Kaynak",
         "StatisticsAreNotRecorded": "Matomo Ziyaretçi İzlemesi şu anda devre dışı! config\/config.ini.php dısyasındaki record_statistics seçeneğinin değerini 1 yaparak izlemeyi yeniden etkinleştirin.",
         "Subtotal": "Ara toplam",
