--- a/plugins/CoreAdminHome/lang/el.json
+++ b/plugins/CoreAdminHome/lang/el.json
@@ -4,6 +4,7 @@
         "Administration": "Διαχείριση",
         "ArchivingSettings": "Ρυθμίσεις αρχειοθέτησης",
         "BrandingSettings": "Εταιρικές ρυθμίσεις",
+        "ErrorEmailFromAddressNotValid": "Η διεύθυνση από στο SMTP δεν είναι έγκυρη",
         "ReleaseChannel": "Κανάλι εκδόσεων",
         "ClickHereToOptIn": "Πατήστε εδώ για να καταγράφεστε",
         "ClickHereToOptOut": "Πατήστε εδώ για να μην καταγράφεστε",
