--- a/plugins/ScheduledReports/lang/es-ar.json
+++ b/plugins/ScheduledReports/lang/es-ar.json
@@ -1,13 +1,13 @@
 {
     "ScheduledReports": {
-        "AggregateReportsFormat_GraphsOnly": "Mostrar sólo gráficas (no reportes de tablas)",
-        "AggregateReportsFormat_TablesAndGraphs": "Mostrar Reporte de tablas y Gráficas para todos los reportes",
-        "AggregateReportsFormat_TablesOnly": "(por defecto) Mostrar Reporte de tablas (Gráficas sólo para mediciones clave)",
-        "AlsoSendReportToTheseEmails": "También envíe el reporte a estos correos (un correo por linea):",
-        "AreYouSureDeleteReport": "¿Está seguro de que desea eliminar este reporte y su envío programado?",
-        "CancelAndReturnToReports": "Cancelar y %1$svolver a la lista de reportes%2$s",
-        "CreateAndScheduleReport": "Crear y Programar un reporte",
-        "CreateReport": "Crear Reporte",
+        "AggregateReportsFormat_GraphsOnly": "Mostrar sólo gráficos (sin tablas de informes)",
+        "AggregateReportsFormat_TablesAndGraphs": "Mostrar tablas de informes y gráficos para todos los informes",
+        "AggregateReportsFormat_TablesOnly": "(Predeterminado) Mostrar tablas de informes (gráficos sólo para mediciones clave)",
+        "AlsoSendReportToTheseEmails": "También enviar el informe a estas direcciones de correos electrónicos (una dirección por linea):",
+        "AreYouSureDeleteReport": "¿Estás seguro que querés eliminar este informe y su programación?",
+        "CancelAndReturnToReports": "Cancelar y %1$svolver a la lista de informes%2$s",
+        "CreateAndScheduleReport": "Crear y programar un informe",
+        "CreateReport": "Crear informe",
         "CustomVisitorSegment": "Segmento de Visitante Personalizado:",
         "DescriptionOnFirstPage": "La descripción del reporte será mostrada en la primera página del reporte.",
         "DisplayFormat_TablesOnly": "Mostrar sólo Tablas (no gráficas)",
