--- a/plugins/SegmentEditor/lang/de.json
+++ b/plugins/SegmentEditor/lang/de.json
@@ -54,7 +54,7 @@
         "CustomUnprocessedSegmentNoData": "Um Daten für dieses Segment zu sehen, müssen Sie das Segment manuell im Segment Editor erstellen, dann ein paar Stunden auf die Verarbeitung warten.",
         "AddThisToMatomo": "Dieses Segment zu Matomo hinzufügen",
         "ThisSegmentIsCompared": "Dieses Segment wird gerade verglichen.",
-        "ThisSegmentIsSelectedAndCannotBeCompared": "Dieses Segment ist aktuell ausgewählt und kann deshalb nicht fr einen Vergleich ausgewählt werden.",
+        "ThisSegmentIsSelectedAndCannotBeCompared": "Dieses Segment ist aktuell ausgewählt und kann deshalb nicht für einen Vergleich ausgewählt werden.",
         "CompareThisSegment": "Vergleiche dieses Segment mit ausgewähltem Segment und Zeitraum.",
         "Test": "Test"
     }
