--- a/plugins/UsersManager/lang/es-ar.json
+++ b/plugins/UsersManager/lang/es-ar.json
@@ -145,6 +145,26 @@
         "DeleteUserPermConfirmSingle": "¿Estás seguro que querés cambiar el rol de %1$s, de %2$s a %3$s?",
         "DeleteUserPermConfirmMultiple": "¿Estás seguro que querés cambiar el rol de los %1$s usuarios seleccionados, de %2$s a %3$s?",
         "AreYouSureChangeDetails": "¿Estás seguro que querés cambiar la información de usuario de %s?",
-        "AnonymousUserRoleChangeWarning": "Dar al usuario %1$s el rol de %2$s hará que los datos de este sitio web sean publicos y que estén disponibles para todos, incluso sin iniciar sesión en Matomo."
+        "AnonymousUserRoleChangeWarning": "Dar al usuario %1$s el rol de %2$s hará que los datos de este sitio web sean publicos y que estén disponibles para todos, incluso sin iniciar sesión en Matomo.",
+        "GiveAccessToAll": "Darle a este usuario acceso a todos los sitios web",
+        "OrManageIndividually": "O administrá el acceso de este usuario a cada sitio web individualmente",
+        "ChangePermToAllSitesConfirm": "¿Estás seguro que querés darle al %1$susuario%2$s acceso a cada sitio web en los que actualmente tenés acceso de administrador?",
+        "ChangePermToAllSitesConfirm2": "Nota: esto sólo afectará los sitios web existentes actualmente. Los nuevos sitios web que vayás a crear no serán accesibles automáticamente para este usuario.",
+        "CapabilitiesHelp": "Las capacidades son habilidades individuales que se le pueden garantizar a los usuarios. Los roles pueden, predeterminadamente, garantizar ciertas capacidades. Por ejemplo, el rol de administrador le permitirá automáticamente a los usuarios editar etiquetas en el Administrador de etiquetas. Para usuarios con menos poder, sin embargo, podés darle capacidades explícitamente.",
+        "Capabilities": "Capacidades",
+        "AreYouSureAddCapability": "¿Estás seguro que querés darle a %1$s la capacidad %2$s para %3$s?",
+        "AreYouSureRemoveCapability": "¿Estás seguro que querés quitarle a %2$s la capacidad %1$s para %3$s?",
+        "IncludedInUsersRole": "Incluida en el rol de este usuario.",
+        "Capability": "Capacidad",
+        "EmailChangeNotificationSubject": "Se acaba de cambiar la dirección de correo electrónico de tu cuenta de Matomo",
+        "EmailChangedEmail1": "La dirección de correo electrónico asociada a tu cuenta fue cambiada a %1$s",
+        "EmailChangedEmail2": "Este cambio se produjo desde el siguiente dispositivo: %1$s (dirección IP: %2$s).",
+        "IfThisWasYouIgnoreIfNot": "Si fuiste vos, simplemente ignorá este mensaje. Si no fuiste vos, por favor, iniciá sesión, cambiá tu dirección de correo electrónico y contraseña, y contactá a tu administrador de Matomo.",
+        "PasswordChangeNotificationSubject": "Se acaba de cambiar la contraseña de tu cuenta de Matomo",
+        "PasswordChangedEmail": "Tu contraseña se cambió. El cambio se produjo desde el siguiente dispositivo: %1$s (dirección IP: %2$s).",
+        "NewsletterSignupTitle": "Registro en el boletín informativo",
+        "NewsletterSignupMessage": "Suscribite a nuestro boletín informativo para recibir regularmente información sobre Matomo. Podés desuscribirte cuando quieras. Este servicio usa MadMini. Conocé más al respecto en nuestra %1$spágina de política de privacidad%2$s.",
+        "NewsletterSignupFailureMessage": "Epa, algo salió mal. No pudimos suscribirte al boletín informativo.",
+        "NewsletterSignupSuccessMessage": "¡Joya, ya estás registrado! Nos estaremos contactando pronto."
     }
 }
