--- a/lang/da.json
+++ b/lang/da.json
@@ -233,6 +233,7 @@
         "GraphHelp": "Flere oplysninger om visning af diagrammer i Matomo.",
         "HelloUser": "Hej %s!",
         "Help": "Hjælp",
+        "HelpResources": "Hjælpe resourcer",
         "HelpTranslatePiwik": "Måske vil du gerne %1$shjæle til at forbedre Matomo oversættelser%2$s?",
         "Hide": "skjul",
         "HoursMinutes": "%1$s timer %2$s minutter",
@@ -302,6 +303,7 @@
         "OneVisit": "1 besøg",
         "OnlyEnterIfRequired": "Indtast kun et brugernavn, hvis SMTP-serveren kræver det",
         "OnlyEnterIfRequiredPassword": "Indtast kun en adgangskode, hvis SMTP-serveren kræver det",
+        "NameShownInTheSenderColumn": "Navnet der er vist i afsender kolonnen",
         "OnlyUsedIfUserPwdIsSet": "Anvendes kun, hvis brugernavn\/adgangskode er sat, spørg din udbyder hvis du ikke ved hvilken metode der skal bruges.",
         "OpenSourceWebAnalytics": "Open Source webanalyse",
         "OperationAtLeast": "Mindst",
@@ -399,6 +401,8 @@
         "SmtpPort": "SMTP-port",
         "SmtpServerAddress": "SMTP-serveradresse",
         "SmtpUsername": "SMTP-brugernavn",
+        "SmtpFromName": "SMTP afsender navn",
+        "SmtpFromAddress": "SMTP afsender adresse",
         "Source": "Kilde",
         "StatisticsAreNotRecorded": "Matomo besøgssporing er i øjeblikket deaktiveret! Genaktiver sporing ved at sætte record_statistics = 1 i config\/config.ini.php filen.",
         "Subtotal": "Subtotal",
@@ -490,6 +494,7 @@
         "YouAreViewingDemoMessage": "Du kigger på en demo version af %1$sMatomo%2$s",
         "YouMustBeLoggedIn": "Du skal være logget på for at få adgang til denne funktion.",
         "YourChangesHaveBeenSaved": "Ændringer er gemt.",
+        "YourSessionHasExpired": "Din session er udløbet på grund af inaktivitet. Log venligst ind igen for at fortsætte.",
         "ThankYouForUsingMatomo": "Tak fordi du bruger Matomo",
         "TheMatomoTeam": "Holdet bag Matomo",
         "PleaseTryAgain": "Prøv venligst igen"
