--- a/plugins/CorePluginsAdmin/lang/sv.json
+++ b/plugins/CorePluginsAdmin/lang/sv.json
@@ -57,6 +57,13 @@
         "TeaserExtendPiwikByPlugin": "Utöka Matomo genom att %1$sinstallera plugins från marknadsplatsen%2$s eller %3$sladda upp i zipformat%4$s.",
         "TeaserExtendPiwikByTheme": "Njut av ett nytt utseende genom att%1$sinstallera ett nytt tema%2$s.",
         "InstallingNewPluginViaMarketplaceOrUpload": "Du kan automatiskt installera plugin från Butiken eller %1$sladda upp en plugin%2$s i .zip format.",
+        "TagManagerNowAvailableTitle": "Matomo Tag Manager är nu tillgänglig",
+        "ActivateTagManagerNow": "Aktivera Tag Manager nu",
+        "TagManagerTeaserHideSuperUser": "Visa inte den här sidan för någon användare",
+        "TagManagerTeaserHideNonSuperUser": "Inte intresserad. Visa inte den här sidan igen",
+        "WhatIsTagManager": "Vad är en Tag Manager?",
+        "WhyUsingATagManager": "Vaför en Tag Manager?",
+        "AreThereAnyRisks": "Finns det några risker?",
         "Theme": "Tema",
         "Themes": "Teman",
         "ThemesDescription": "Teman kan förändra utseendet på Matomos gränssnitt, och erbjuda en helt ny visuell upplevelse där du kan ta del av dina analysrapporter.",
