--- a/plugins/Feedback/lang/sv.json
+++ b/plugins/Feedback/lang/sv.json
@@ -22,6 +22,11 @@
         "ProfessionalServicesOfferIntro": "Vilka tjänster kan du dra nytta av?",
         "ContactUs": "Kontakta oss",
         "VisitTheForums": "Besök %1$s forumet%2$s och få hjälp av Matomo-användare",
-        "Forums": "Forum"
+        "Forums": "Forum",
+        "RemindMeLater": "Påminn mig senare",
+        "NeverAskMeAgain": "Fråga mig inte igen",
+        "HowCanWeHelp": "Hur kan vi hjälpa?",
+        "NotTrackingVisits": "Matomo spårar inte några besök",
+        "SearchOnMatomo": "Sök efter '%1$s' på Matomo.org"
     }
 }
