--- a/plugins/Marketplace/lang/pt.json
+++ b/plugins/Marketplace/lang/pt.json
@@ -8,7 +8,7 @@
         "AllowedUploadFormats": "Pode enviar uma extensão ou um tema no formato .zip através desta página.",
         "Authors": "Autores",
         "Browse": "Explorar",
-        "LatestMarketplaceUpdates": "Atualizações mais recentes na Loja",
+        "LatestMarketplaceUpdates": "Últimas atualizações na Loja",
         "BackToMarketplace": "Voltar à loja",
         "BrowseMarketplace": "Explorar a loja",
         "ByXDevelopers": "por %s programadores",
@@ -19,6 +19,7 @@
         "ConfirmRemoveLicense": "Tem a certeza que pretende remover a sua chave da licença? Não irá receber mais quaisquer atualizações para as extensões adquiridas.",
         "Developer": "Programador",
         "DevelopersLearnHowToDevelopPlugins": "Programadores: aprendam a estender e a personalizar o Matomo %1$sdesenvolvendo extensões ou temas%2$s.",
+        "NoticeRemoveMarketplaceFromReportingMenu": "Pode remover a Loja do menu de relatórios instalando a extensão %1$sWhite Label%2$s.",
         "Marketplace": "Loja",
         "PaidPlugins": "Funcionalidades exclusivas",
         "FeaturedPlugin": "Extensão destacada",
