--- a/plugins/PrivacyManager/lang/pt-br.json
+++ b/plugins/PrivacyManager/lang/pt-br.json
@@ -66,6 +66,9 @@
         "TeaserHeadline": "Configurações de privacidade",
         "UseAnonymizedIpForVisitEnrichment": "Utilize também o endereço de IP Anonimizado ao enriquecer visitas.",
         "UseAnonymizedIpForVisitEnrichmentNote": "Plugins como Geolocalização via IP e Provedor melhoram os metadados de visitantes. Por padrão, estes plugins usam os endereços IP anonimizados. Se você selecionar 'Não', então o endereço IP completo não-anonimizado será usado nesse caso, resultando em menos privacidade mas melhor precisão dos dados.",
+        "PseudonymizeUserIdNote": "Quando você habilita esta opção, o ID de usuário será substituído por um pseudônimo para evitar armazenar e exibir diretamente informações de identificação pessoal como um endereço de e-mail. Em termos técnicos: dado o seu ID de usuário, o Matomo irá processar o pseudônimo do ID de usuário usando uma função de hash com sal.",
+        "PseudonymizeUserIdNote2": "Obs: substituir por um pseudônimo não é o mesmo que anonimização. Em termos da GDPR: o pseudônimo do ID de usuário ainda conta como dado pessoal. O ID de usuário original ainda pode ser identificado se certas informações adicionais estiverem disponíveis (às quais apenas o Matomo e o seu processador de dados têm acesso).",
+        "AnonymizeOrderIdNote": "Como um ID de pedido pode ser cruzado com outro sistema, tipicamente uma loja de comércio eletrônico, o ID de pedido pode contar como informação pessoal sob a GDPR. Quando você habilita esta opção, um ID de pedido será automaticamente anonimizado para que nenhuma informação pessoal seja rastreada.",
         "UseAnonymizeIp": "Anonimizar endereços IP dos visitantes",
         "UseAnonymizeTrackingData": "Anonimizar dados de rastreamento",
         "UseAnonymizeUserId": "Anonimizar ID de usuário",
