--- a/lang/fi.json
+++ b/lang/fi.json
@@ -233,6 +233,7 @@
         "GraphHelp": "Lisätietoa Matomon kuvaajista.",
         "HelloUser": "Hei, %s!",
         "Help": "Apua",
+        "HelpResources": "Ohjeresurssit",
         "HelpTranslatePiwik": "Haluatko %1$sauttaa parantamaan Matomon käännöksiä?%2$s?",
         "Hide": "piilota",
         "HoursMinutes": "%1$s tuntia %2$s minuuttia",
@@ -399,6 +400,8 @@
         "SmtpPort": "SMTP:n portti",
         "SmtpServerAddress": "SMTP-palvelimen osoite",
         "SmtpUsername": "SMTP-käyttäjätunnus",
+        "SmtpFromName": "SMTP:n From-nimi",
+        "SmtpFromAddress": "SMTP:n From-osoite",
         "Source": "Lähde",
         "StatisticsAreNotRecorded": "Matomon Kävijäseuranta ei ole käytössä tällä hetkellä! Aktivoi seuranta asettamalla record_statistics = 1 tiedostossa config\/config.ini.php.",
         "Subtotal": "Yhteensä",
@@ -490,8 +493,10 @@
         "YouAreViewingDemoMessage": "Katselet %1$sMatomo%2$s -demoa.",
         "YouMustBeLoggedIn": "Sinun täytyy kirjautua sisään ennen tämän toiminnallisuuden käyttämistä.",
         "YourChangesHaveBeenSaved": "Muutokset on tallennettu.",
+        "YourSessionHasExpired": "Istuntosi on vanhentunut toimettomuuden vuoksi. Kirjaudu uudelleen jatkaaksesi.",
         "ThankYouForUsingMatomo": "Kiitos kun päätit käyttää Matomoa",
-        "TheMatomoTeam": "Matomo-tiimi"
+        "TheMatomoTeam": "Matomo-tiimi",
+        "PleaseTryAgain": "Yritä uudelleen"
     },
     "Mobile": {
         "AboutPiwikMobile": "Tietoja Matomo Mobilesta",
