--- a/plugins/CoreAdminHome/lang/fr.json
+++ b/plugins/CoreAdminHome/lang/fr.json
@@ -4,6 +4,7 @@
         "Administration": "Administration",
         "ArchivingSettings": "Paramètres d'archivage",
         "BrandingSettings": "Paramètres de l'image de marque",
+        "ErrorEmailFromAddressNotValid": "L'adresse d'origine SMTP n'est pas valide",
         "ReleaseChannel": "Canal de sortie",
         "ClickHereToOptIn": "Cliquez ici pour inclure votre ordinateur.",
         "ClickHereToOptOut": "Cliquez ici pour exclure votre ordinateur.",
@@ -29,6 +30,7 @@
         "JSTracking_CampaignKwdParam": "Paramètre de la campagne de mot-clé",
         "JSTracking_CampaignNameParam": "Paramètre nom de la campagne",
         "JSTracking_CodeNoteBeforeClosingHead": "Vérifiez que ce code est présent sur l'ensemble des pages de votre site web. Nous vous recommandons de le placer immédiatement avant la balise de fermeture 1%1$s .",
+        "JSTracking_CodeNoteBeforeClosingHeadEmail": "Assurez-vous que ce code est intégré dans un élément de script sur chaque page de votre site web. Nous vous conseillons de le coller juste avant la balise de fermeture des entêtes 'head'.",
         "JSTracking_CustomCampaignQueryParam": "Utilisez des paramètres de requête personnalisés pour le nom et le mot-clé de la campagne",
         "JSTracking_CrossDomain": "Par défaut, l'ID du visiteur qui identifie un visiteur unique est stocké dans les cookies de premier niveau ne peuvant uniquement être accédés par des pages du même domaine. Activer l'association croisée des domaines vous permet de suivre toutes les actions et vues de pages d'un visiteur spécifique sur plusieurs domaines. Quand un utilisateur clique sur le lien vers une des URL alias de votre site web, cela va ajouter un paramètre d'URL pk_vid faisant suivre l'ID du visiteur.",
         "JSTracking_CrossDomain_NeedsMultipleDomains": "Note : pour utiliser la liaison inter-domaine, vous devez spécifier plus qu'un nom de domaine (URLs) pour votre site web.",
@@ -53,6 +55,8 @@
         "JSTracking_EndNote": "Note : vous pouvez générer un code de suivi personnalisé dans la section d'administration %1$sCode de suivi%2$s.",
         "JSTrackingIntro1": "Vous pouvez suivre les visiteurs de votre site web de différentes manières. La méthode recommandée est de le faire via JavaScript. Pour utiliser cette méthode, vous devez vous assurer que chaque page de votre site web contient du code JavaScript; que vous pouvez générer ici.",
         "JSTrackingIntro2": "Une fois que vous avez le code de suivi JavaScript pour votre site web, copiez-collez le sur toutes les pages dont vous voulez effectuer le suivi avec Matomo.",
+        "JSTrackingIntro3a": "Dans la plupart des sites web, blogs, CMS, etc. vous pouvez utiliser un plugin pour faire le travail technique à votre place (voir notre %1$sliste de plugins existants pour intégrer Matomo%2$s).",
+        "JSTrackingIntro3b": "Si aucun plugin n'existe, vous pouvez éditer les modèles de votre site web et ajouter le code de suivi JavaScript juste avant la balise &lt;\/head&gt ; qui est souvent définie dans un fichier 'header.php', 'header.tpl' ou similaire.",
         "JSTrackingIntro4": "Si vous ne souhaitez pas utiliser JavaScript pour effectuer le suivi des visiteurs, %1$sgénérez un lien de suivi par image ci-dessous%2$s.",
         "JSTrackingIntro5": "Si vous voulez faire plus qu'effectuer le suivi des visites de pages, veuillez consulter %1$sla documentation Matomo JavaScript Tracking%2$s pour connaître la liste des fonctions disponibles. En utilisant ces fonctions vous pouvez effectuer le suivi des objectifs, variables personnalisées, commandes de e-commerce, chariots\/paniers abandonnés et plus encore.",
         "LogoNotWriteableInstruction": "Afin d'utiliser votre logo personnalité au lieu du logo par défaut Matomo, ajoutez des permissions à ce répertoire : %1$s Matomo a besoin d'un accès en écriture à vos logos stockés dans les fichiers %2$s.",
@@ -130,6 +134,8 @@
         "ConfirmDeleteThisTrackingFailure": "Êtes-vous sûr(e) de vouloir supprimer cette erreur de suivi ?",
         "TrackingFailuresEmailSubject": "Erreurs de suivi dans Matomo",
         "TrackingFailuresEmail1": "C'est simplement pour vous avertir %s sortes différentes d'erreurs de suivi sont survenues ces derniers jours.",
-        "TrackingFailuresEmail2": "Afin de visualiser toutes les erreurs de suivi %1$s cliquez ici %2$s."
+        "TrackingFailuresEmail2": "Afin de visualiser toutes les erreurs de suivi %1$s cliquez ici %2$s.",
+        "ImportFromGoogleAnalytics": "Importer depuis Google Analytics",
+        "ImportFromGoogleAnalyticsDescription": "Si vous avez une propriété Google Analytics et que vous passez à Matomo, vous pouvez importer vos données existantes en utilisant le %1$splugin GoogleAnalyticsImporter%2$s."
     }
 }
