--- a/plugins/CoreUpdater/lang/pt.json
+++ b/plugins/CoreUpdater/lang/pt.json
@@ -1,7 +1,7 @@
 {
     "CoreUpdater": {
         "CheckingForPluginUpdates": "A procurar por novas atualizações de extensões",
-        "ClickHereToViewSqlQueries": "Clique aqui para ver e copiar a lista de instruções SQL e comandos que serão executados.",
+        "ClickHereToViewSqlQueries": "Clique aqui para ver e copiar a lista de instruções SQL e comandos da consola que serão executados.",
         "CriticalErrorDuringTheUpgradeProcess": "Erro crítico durante o processo de atualização:",
         "DatabaseUpgradeRequired": "Necessária uma atualização da base de dados",
         "DisablingIncompatiblePlugins": "A desativar extensões incompatíveis: %s",
@@ -31,9 +31,9 @@
         "Latest2XStableRelease": "Última 2.X estável",
         "Latest2XBetaRelease": "Última 2.X beta",
         "LtsSupportVersion": "Versão de suporte de longo termo",
-        "ListOfSqlQueriesFYI": "Para sua informação: estas são as instruções SQL e os comandos que serão executados na atualização da sua base de dados para o Matomo %s",
+        "ListOfSqlQueriesFYI": "Para sua informação: estas são as instruções SQL e os comandos da consola que serão executados para a atualização da sua base de dados do Matomo %s",
         "TheseSqlQueriesWillBeExecuted": "Serão executadas as seguintes instruções SQL:",
-        "TheseCommandsWillBeExecuted": "Serão executados os seguintes comandos:",
+        "TheseCommandsWillBeExecuted": "Serão executados os seguintes comandos da consola:",
         "MajorUpdateWarning1": "Esta é uma grande atualização! Irá demorar mais tempo do que é habitual.",
         "MajorUpdateWarning2": "A recomendação seguinte é especialmente importante para grandes instalações.",
         "NeedHelpUpgrading": "Precisa de ajuda para atualizar o Matomo?",
@@ -77,7 +77,7 @@
         "DbUpgradeNotExecuted": "Atualização da base de dados não executada.",
         "ConsoleUpdateUnexpectedUserWarning": "Parece que executou esta atualização com o utilizador %1$s, enquanto os seus ficheiros do Matomo são propriedade de %2$s. \n\nPara garantir que os ficheiros do Matomo são legíveis pelo utilizador correto, deve executar o seguinte comando (ou similar, dependendo da configuração do seu servidor):\n\n$ %3$s",
         "ConsoleUpdateFailure": "O Matomo não pôde ser atualizado! Consulte mais informação acima.",
-        "ConsoleUpdateNoSqlQueries": "Nota: Não existem instruções SQL ou comandos para executar.",
+        "ConsoleUpdateNoSqlQueries": "Nota: Não existem instruções SQL ou comandos da consola para executar.",
         "AlreadyUpToDate": "Está tudo atualizado.",
         "ExecuteDbUpgrade": "É necessária uma atualização da base de dados. Executar atualização?",
         "DryRun": "Nota: isto é uma simulação",
