--- a/plugins/SegmentEditor/lang/pt.json
+++ b/plugins/SegmentEditor/lang/pt.json
@@ -1,5 +1,6 @@
 {
     "SegmentEditor": {
+        "PluginDescription": "Um segmento é um conjunto de critérios utilizados para selecionar apenas uma parte do conjunto completo de visitas. Ao utilizar segmentos, pode injetar contextos arbitrários nos seus relatórios.",
         "AddANDorORCondition": "Adicionar condição %s",
         "AddNewSegment": "Adicionar novo segmento",
         "AreYouSureDeleteSegment": "Tem a certeza de que pretende eliminar este segmento?",
@@ -52,6 +53,9 @@
         "CustomUnprocessedSegmentApiError6": "Quando utiliza este método da API, irá ver que utilizadores e ações coincidiram com o seu parâmetro &segment=.",
         "CustomUnprocessedSegmentNoData": "Para ver dados para este segmento, deve criar este segmento manualmente no editor de segmentos, depois aguardar algumas horas até o pré-processamento terminar.",
         "AddThisToMatomo": "Adicionar este segmento ao Matomo",
+        "ThisSegmentIsCompared": "Este segmentos está atualmente a ser comparado.",
+        "ThisSegmentIsSelectedAndCannotBeCompared": "Este segmento está atualmente selecionado pelo que não pode ser selecionado para a comparação.",
+        "CompareThisSegment": "Comparar este segmento com o segmento e período selecionado.",
         "Test": "Teste"
     }
 }
