--- a/plugins/UsersManager/lang/pt-br.json
+++ b/plugins/UsersManager/lang/pt-br.json
@@ -4,57 +4,64 @@
         "UsesTwoFactorAuthentication": "Usar autenticação de dois fatores",
         "TwoFactorAuthentication": "Autenticação de dois fatores",
         "ResetTwoFactorAuthentication": "Redefinir autenticação de dois fatores",
+        "ResetTwoFactorAuthenticationInfo": "Se o usuário não puder mais fazer login devido à perda dos códigos de recuperação ou à perda de um dispositivo de autenticação, você pode redefinir a autenticação de dois fatores para o usuário para que ele possa fazer login novamente.",
         "AddUser": "Adicionar novo usuário",
         "AddExistingUser": "Adicionar um usuário existente",
         "AddNewUser": "Adicionar novo usuário",
         "EditUser": "Editar usuário",
         "CreateUser": "Criar usuário",
-        "SaveBasicInfo": "Salvar Informação Básica",
+        "SaveBasicInfo": "Salvar informação básica",
         "Alias": "Apelido",
-        "AllWebsites": "Todos os websites",
-        "AnonymousAccessConfirmation": "Você está prestes a conceder para o usuário anônimo o acesso de 'visualização' para este website. Isso significa que seus relatórios e as informações de seus visitantes serão publicamente visíveis por qualquer pessoa, mesmo sem login. Vocês tem certeza que deseja continuar?",
+        "AllWebsites": "Todos os sites",
+        "AnonymousAccessConfirmation": "Você está prestes a conceder para o usuário anônimo o acesso de 'visualização' para este site. Isso significa que seus relatórios de análise e as informações de seus visitantes serão publicamente visíveis por qualquer pessoa, mesmo sem login. Você tem certeza de que deseja continuar?",
         "AnonymousUser": "Usuário anônimo",
-        "AnonymousUserHasViewAccess": "Nota: o usuário %1$s tem acesso %2$s para este site.",
+        "AnonymousUserHasViewAccess": "Obs: o usuário %1$s tem acesso %2$s para este site.",
         "AnonymousUserHasViewAccess2": "Seus relatórios de análise e suas informações de visitantes são visíveis publicamente.",
-        "ApplyToAllWebsites": "Aplicar a todos os websites",
+        "ApplyToAllWebsites": "Aplicar a todos os sites",
         "ChangeAllConfirm": "Você tem certeza que quer dar acesso a '%s' para todos os websites?",
-        "ClickHereToDeleteTheCookie": "Clique aqui para deletar o cookie e deixar o Matomo rastrear suas visitas",
-        "ClickHereToSetTheCookieOnDomain": "Clique aqui para setar um cookie que excluirá suas visitas em websites rastrados pelo Matomo em %s",
+        "ClickHereToDeleteTheCookie": "Clique aqui para excluir o cookie e deixar o Matomo rastrear suas visitas",
+        "ClickHereToSetTheCookieOnDomain": "Clique aqui para definir um cookie que excluirá suas visitas em sites rastreados pelo Matomo em %s",
         "ConfirmGrantSuperUserAccess": "Você realmente deseja conceder a '%s' o acesso de Super Usuário? Aviso: o usuário terá acesso a todos os sites e será capaz de executar tarefas administrativas.",
         "ConfirmProhibitMySuperUserAccess": "%s, você realmente deseja remover o seu próprio acesso de Super Usuário? Você perderá todas as permissões e acessos a todos os sites e será desconectado do Matomo.",
         "ConfirmProhibitOtherUsersSuperUserAccess": "Você realmente deseja remover o acesso de Super Usuário de '%s'? O usuário perderá todas as permissões e acesso a todos os sites. Certifique-se de dar acesso a sites necessários mais tarde, se for preciso.",
-        "DeleteConfirm": "Tem certeza que deseja apagar o usuário %s?",
+        "DeleteConfirm": "Tem certeza que deseja excluir o usuário %s?",
         "Email": "E-mail",
-        "EmailYourAdministrator": "%1$s E-mail a seu administrador sobre este problema %2$s.",
+        "EmailYourAdministrator": "%1$sEnviar e-mail a seu administrador sobre este problema%2$s.",
         "EnterUsernameOrEmail": "Digite um nome de usuário ou endereço de e-mail",
         "ExceptionAccessValues": "O parâmetro de acesso deve conter um dos seguintes valores: [ %1$s ], '%2$s' fornecido.",
+        "ExceptionNoRoleSet": "Nenhuma regra foi definida, mas uma delas precisa ser: %s",
+        "ExceptionMultipleRoleSet": "Apenas uma regra pode ser definida, mas várias foram definidas. Use somente uma delas: %s",
         "ExceptionAnonymousNoCapabilities": "Você não pode conceder nenhuma capacidade para o usuário 'anônimo'.",
-        "ExceptionDeleteDoesNotExist": "O usuário '%s' não existe assim não é possível excluí-lo.",
-        "ExceptionDeleteOnlyUserWithSuperUserAccess": "Não é possível excluir o usuário '%s'",
+        "ExceptionAnonymousAccessNotPossible": "Você pode definir somente acesso %1$s ou %2$s acesso para o usuário 'anônimo(a)'.",
+        "ExceptionDeleteDoesNotExist": "O usuário '%s' não existe portanto não é possível excluí-lo.",
+        "ExceptionDeleteOnlyUserWithSuperUserAccess": "Não é possível excluir o usuário '%s'.",
         "ExceptionEditAnonymous": "O usuário anonymous não pode ser editado ou apagado. Ele é usado pelo sistema para definir um usuário que ainda não não entrou. Por examplo, você pode tornar as estatísticas públicas concedendo acesso 'view' para o usuário 'anonymous'.",
         "ExceptionEmailExists": "Usuário com o e-mail '%s' já existe.",
         "ExceptionInvalidEmail": "O e-mail não tem um formato válido.",
         "ExceptionInvalidLoginFormat": "O nome de usuário deve ter entre %1$s e %2$s caracteres e conter apenas letras, números ou os caracteres '_' or '-' or '.' or '@' or '+'",
         "ExceptionInvalidPassword": "O comprimento da senha deve ser maior que %1$s caracteres.",
+        "ExceptionInvalidPasswordTooLong": "O tamanho da senha deve ser menor que %1$s caracteres.",
         "ExceptionLoginExists": "O nome de usuário '%s' já existe.",
-        "ExceptionPasswordMD5HashExpected": "UsersManager.getTokenAuth está esperando por uma senha MD5-hashed (32 caracteres). Por favor, chame a função md5() na senha antes de chamar este método.",
-        "ExceptionRemoveSuperUserAccessOnlySuperUser": "Não é possível remover o acesso de Super Usuário do usuário '%s'",
-        "ExceptionSuperUserAccess": "Este usuário tem acesso Super Usuário e já tem permissão para acessar e modificar todos os websites no Matomo. Você pode remover o acesso de Super Usuário deste usuário e tentar novamente.",
+        "ExceptionPasswordMD5HashExpected": "UsersManager.getTokenAuth está esperando por um hash MD5 da senha (32 caracteres). Por favor, chame a função md5() na senha antes de chamar este método.",
+        "ExceptionRemoveSuperUserAccessOnlySuperUser": "Não é possível remover o acesso de Super Usuário do usuário '%s'.",
+        "ExceptionSuperUserAccess": "Este usuário tem acesso Super Usuário e já tem permissão para acessar e modificar todos os sites no Matomo. Você pode remover o acesso de Super Usuário deste usuário e tentar novamente.",
+        "ExceptionUserHasSuperUserAccess": "O usuário '%s' tem acesso Super Usuário e já tem permissão para acessar e modificar todos os sites no Matomo. Você pode remover o acesso Super Usuário deste usuário e tentar novamente.",
         "ExceptionUserDoesNotExist": "Usuário '%s' não existe.",
         "ExceptionYouMustGrantSuperUserAccessFirst": "É preciso haver pelo menos um usuário com acesso de Super Usuário. Por favor, conceda acesso de Super Usuário para outro usuário primeiro.",
-        "ExceptionUserHasViewAccessAlready": "Esse usuário já tem acesso a este website.",
+        "ExceptionUserHasViewAccessAlready": "Esse usuário já tem acesso a este site.",
         "ExceptionNoValueForUsernameOrEmail": "Por favor, digite um nome de usuário ou endereço de e-mail.",
-        "ExcludeVisitsViaCookie": "Excluir suas visitas usando cookie",
-        "ForAnonymousUsersReportDateToLoadByDefault": "Para usuários anônimos, reportar dara para carregar por padrão",
+        "ExcludeVisitsViaCookie": "Excluir suas visitas usando um cookie",
+        "ForAnonymousUsersReportDateToLoadByDefault": "Para usuários anônimos, reportar data a ser carregada por padrão",
         "GiveUserAccess": "Permitir '%1$s' %2$s acesso para %3$s.",
         "GiveViewAccess": "Permitir acesso de visualização para %1$s",
         "GiveViewAccessTitle": "Dar a usuário existente acesso para visualizar relatórios de %s",
         "GiveViewAccessInstructions": "Para dar acesso a um usuário existente para %s digite o nome de usuário ou endereço de e-mail de um usuário existente",
+        "IfYouWouldLikeToChangeThePasswordTypeANewOne": "Se você deseja alterar sua senha, digite uma nova. Caso contrário, deixe em branco.",
         "YourCurrentPassword": "Sua senha atual",
         "CurrentPasswordNotCorrect": "A senha atual informada não está correta.",
         "ConfirmWithPassword": "Por favor digite sua senha para confirmar esta alteração.",
         "InjectedHostCannotChangePwd": "Você está visitando com um host desconhecido (%1$s). Você não pode mudar sua senha até que este problema seja resolvido.",
-        "LastSeen": "Último visto",
+        "LastSeen": "Visto por último",
         "MainDescription": "Decida quais usuários têm acesso a seus sites. Você também pode dar acesso a todos os sites de uma só vez, escolhendo \"Aplicar a todos os websites\" no seletor de website.",
         "ManageAccess": "Gerenciar acesso",
         "MenuAnonymousUserSettings": "Configurações de usuário anônimo",
@@ -62,12 +69,13 @@
         "MenuUserSettings": "Configurações de usuário",
         "MenuPersonal": "Pessoal",
         "PersonalSettings": "Configurações pessoais",
-        "NoteNoAnonymousUserAccessSettingsWontBeUsed2": "Nota: Você não pode alterar as configurações nesta seção, porque você não tem nenhum site que pode ser acessado pelo usuário anônimo.",
-        "NoUsersExist": "Não há usúarios ainda.",
-        "PluginDescription": "O Gerenciamento de Usuários permite que você adicione novos usuários, edite usuários existentes e dá-lhes acesso para visualizar ou administrar websites.",
+        "NoteNoAnonymousUserAccessSettingsWontBeUsed2": "Obs: Você não pode alterar as configurações nesta seção, porque você não tem nenhum site que pode ser acessado pelo usuário anônimo.",
+        "NoUsersExist": "Não há usuários ainda.",
+        "PluginDescription": "O Gerenciamento de Usuários permite que você adicione novos usuários, edite usuários existentes e dê a eles acesso para visualizar ou administrar sites.",
         "PrivAdmin": "Administrador",
         "PrivAdminDescription": "Usuários com esse papel podem gerenciar um website a dar acesso a esse website para outros usuários. Eles também podem fazer qualquer coisa que o papel %s pode fazer.",
         "PrivWrite": "Escrever",
+        "PrivWriteDescription": "Usuários com esta regra pode visualizar todo o conteúdo, além de criar, gerenciar e excluir entidades como Metas, Funis, Mapas de Calor, Gravação de Sessão e Formulários para este site.",
         "PrivNone": "Sem acesso",
         "PrivView": "Visualização",
         "PrivViewDescription": "Um usuário com esse papel pode visualizar todos os relatórios.",
@@ -87,6 +95,7 @@
         "UserHasNoPermission": "%1$s tem atualmente %2$s para %3$s",
         "UsersManagement": "Gerenciamento de usuários",
         "UsersManagementMainDescription": "Crie novos usuários ou atualize os usuários existentes. Você poderá então ajustar as permissões deles acima.",
+        "WhenUsersAreNotLoggedInAndVisitPiwikTheyShouldAccess": "Quando os usuários não estão conectados e visitam o Matomo, eles devem ver inicialmente.",
         "YourUsernameCannotBeChanged": "Seu nome de usuário não pode ser alterado.",
         "YourVisitsAreIgnoredOnDomain": "%1$s Suas visitas são ignoradas pelo Matomo em %2$s %3$s (o Matomo ignora o cookie encontrado em seu navegador).",
         "YourVisitsAreNotIgnored": "%1$sSuas visitas não são ignoradas pelo Matomo%2$s (o Matomo ignora o cookie não encotrado em seu navegador)",
